# cv-inference

./: .dockerignore  .gitignore  Cargo.toml  README.md  config.yaml
.github/workflows/: ci.yml
assets/: README.md
docker/: Dockerfile
docs/: api.md  architecture.md  configuration.md  deployment.md  roadmap.md
scripts/: demo.sh  get_model.sh
src/: config.rs  error.rs  lib.rs  main.rs
src/api/: detect.rs
src/inference/: mod.rs  yolo.rs
src/model/: detection.rs  mod.rs
