[package]
name = "cv-inference"
version = "0.1.0"
edition = "2024"
description = "REST API in Rust that runs YOLO ONNX inference and returns detected objects as JSON"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
# Default features already include `ndarray`, `download-binaries` and `tracing`,
# so ONNX Runtime binaries are fetched automatically at build time.
ort = "=2.0.0-rc.12"
ndarray = "0.17"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "2"
anyhow = "1"

[profile.release]
opt-level = 3
lto = "thin"
