[package]
name = "cv-inference"
version = "0.1.0"
edition = "2024"
description = "Object detection in Rust (YOLO11 + ONNX Runtime): a REST API and an image-annotation CLI on a reusable detection library"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
# Default features already include `ndarray`, `download-binaries` and `tracing`,
# so ONNX Runtime binaries are fetched automatically at build time.
ort = "=2.0.0-rc.12"
ndarray = "0.17"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "2"
anyhow = "1"

# Only needed by the optional `annotate` CLI (feature `draw`), which draws
# bounding boxes on an image. Kept out of the server binary by default.
imageproc = { version = "0.27", optional = true }
ab_glyph = { version = "0.2", optional = true }

[features]
draw = ["dep:imageproc", "dep:ab_glyph"]

# The `annotate` demo tool is built only with `--features draw`.
[[bin]]
name = "annotate"
path = "src/bin/annotate.rs"
required-features = ["draw"]

[profile.release]
opt-level = 3
lto = "thin"
